# kimura-neutral-theory-gaia

./: .gitignore  ANALYSIS.md  README.md  REVIEW.html  pyproject.toml
.gaia/: compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/public/data/: beliefs.json  graph.json  meta.json
.github-output/docs/public/data/sections/: motivation.md  s2_rate_calculation.md  s3_neutral_theory.md
.github-output/wiki/: Home.md  Inference-Results.md  Module-s2-rate-calculation.md  Module-s3-neutral-theory.md  Module-s4-mutation-rates.md  Module-s5-conclusions.md
docs/: detailed-reasoning.md
src/kimura_neutral_theory/: __init__.py  motivation.py  priors.py  s2_rate_calculation.py  s3_neutral_theory.py  s4_mutation_rates.py  s5_conclusions.py
src/kimura_neutral_theory/reviews/: self_review.py
